# Rumission

./: .gitignore  README.md
Firmware/Common/Protos/: CMakeLists.txt  sample.options
Firmware/Common/Protos/v1/: rpc.c
Firmware/west-ws/application/: .gitignore  CMakeLists.txt  Kconfig  west.yml
Firmware/west-ws/application/boards/xtensa/rumission_backpack_main/: Kconfig.board  Kconfig.defconfig  rumission_backpack_main-pinctrl.dtsi  rumission_backpack_main.dts  rumission_backpack_main.yaml  rumission_backpack_main_defconfig
Firmware/west-ws/application/boards/xtensa/rumission_backpack_main/doc/: index.rst
Firmware/west-ws/application/drivers/: CMakeLists.txt  Kconfig
Firmware/west-ws/application/drivers/misc/: CMakeLists.txt  Kconfig
Firmware/west-ws/application/drivers/misc/lmp91000/: CMakeLists.txt  Kconfig  lmp91000.c  lmp91000_regs.h
Firmware/west-ws/application/drivers/misc/pam/: CMakeLists.txt  Kconfig  pam.c
Firmware/west-ws/application/drivers/rpc/: CMakeLists.txt  Kconfig
Firmware/west-ws/application/drivers/rpc/i2c_rpc/: CMakeLists.txt  Kconfig  i2c_rpc.c
Firmware/west-ws/application/drivers/rpc/rpc/: CMakeLists.txt  Kconfig  rpc_device.c
Firmware/west-ws/application/drivers/rpc/uart_rpc/: CMakeLists.txt  Kconfig  uart_rpc.c
Firmware/west-ws/application/drivers/sensor/: CMakeLists.txt  Kconfig
Firmware/west-ws/application/drivers/sensor/axetris/: CMakeLists.txt  Kconfig  axetris.c
Firmware/west-ws/application/drivers/sensor/flow/: CMakeLists.txt  Kconfig  flow.c
Firmware/west-ws/application/drivers/sensor/hih8xxx/: CMakeLists.txt  Kconfig  hih8xxx.c
Firmware/west-ws/application/drivers/serial/: CMakeLists.txt  Kconfig  uart_socket.c
Firmware/west-ws/application/dts/bindings/: vendor-prefixes.txt
Firmware/west-ws/application/dts/bindings/misc/: ti,lmp91000.yml  twobtech,pam.yml
Firmware/west-ws/application/dts/bindings/rpc/: rpc.yml  rumission,i2c-rpc.yml  rumission,rpc.yml  rumission,uart-rpc.yml
Firmware/west-ws/application/dts/bindings/sensor/: axetris,axetris.yml  honeywell,hih8xxx.yml  rumission,flow-meter.yml
Firmware/west-ws/application/dts/bindings/serial/: rumission,uart-socket.yml
Firmware/west-ws/application/include/Protos/v1/: rpc.h
Firmware/west-ws/application/include/drivers/misc/lmp91000/: lmp91000.h
Firmware/west-ws/application/include/drivers/misc/pam/: pam.h
Firmware/west-ws/application/include/drivers/rpc/: rpc_device.h
Firmware/west-ws/application/include/drivers/sensor/: flow.h
Firmware/west-ws/application/include/lib/rpc/: rpc.h
Firmware/west-ws/application/lib/: CMakeLists.txt  Kconfig
Firmware/west-ws/application/lib/rpc/: CMakeLists.txt  Kconfig  rpc.c
Firmware/west-ws/application/main/: CMakeLists.txt  prj.conf
Firmware/west-ws/application/main/src/: main.c
Firmware/west-ws/application/tests/nanopb/simple/: CMakeLists.txt  prj.conf
Firmware/west-ws/application/tests/nanopb/simple/src/: main.c
Firmware/west-ws/application/tests/nanopb/socket-interrupt/: CMakeLists.txt  prj.conf
Firmware/west-ws/application/tests/nanopb/socket-interrupt/boards/: native_posix.overlay
Firmware/west-ws/application/tests/nanopb/socket-interrupt/src/: main.c
Firmware/west-ws/application/tests/rpc/bidirectional/: prj.conf
Firmware/west-ws/application/tests/rpc/bidirectional/src/: main.c
Firmware/west-ws/application/tests/rpc/recv/: CMakeLists.txt  prj.conf
Firmware/west-ws/application/tests/serial/socket/: CMakeLists.txt  prj.conf
(+74 files in other folders)
